[gd_scene load_steps=4 format=2]

[ext_resource path="res://UI/EnterIPScreen/EnterIPScreen.gd" type="Script" id=1]
[ext_resource path="res://segoeuil24.tres" type="DynamicFont" id=2]
[ext_resource path="res://segoeuil16.tres" type="DynamicFont" id=3]

[node name="EnterIPScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 255.0
margin_right = 705.0
margin_bottom = 540.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_top = 158.0
margin_right = 450.0
margin_bottom = 191.0
custom_fonts/font = ExtResource( 2 )
text = "Join a Server"
align = 1

[node name="Timer" type="Timer" parent="HBoxContainer/VBoxContainer/Title"]
wait_time = 3.0

[node name="Username" type="LineEdit" parent="HBoxContainer/VBoxContainer"]
margin_top = 195.0
margin_right = 450.0
margin_bottom = 228.0
custom_fonts/font = ExtResource( 3 )
text = "hagabooga"
align = 1
max_length = 16
placeholder_text = "Username"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Password" type="LineEdit" parent="HBoxContainer/VBoxContainer"]
margin_top = 232.0
margin_right = 450.0
margin_bottom = 265.0
custom_fonts/font = ExtResource( 3 )
text = "asdasd123"
align = 1
max_length = 16
secret = true
placeholder_text = "Password"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConfirmPassword" type="LineEdit" parent="HBoxContainer/VBoxContainer"]
visible = false
margin_top = 250.0
margin_right = 450.0
margin_bottom = 283.0
custom_fonts/font = ExtResource( 3 )
align = 1
max_length = 16
secret = true
placeholder_text = "Confirm Password"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IPAddress" type="LineEdit" parent="HBoxContainer/VBoxContainer"]
margin_top = 269.0
margin_right = 450.0
margin_bottom = 302.0
custom_fonts/font = ExtResource( 3 )
align = 1
placeholder_text = "Server IP Address"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 306.0
margin_right = 450.0
margin_bottom = 345.0
custom_constants/separation = 10
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OKButton" type="Button" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 102.0
margin_right = 145.0
margin_bottom = 39.0
custom_fonts/font = ExtResource( 2 )
text = "OK"

[node name="Timer" type="Timer" parent="HBoxContainer/VBoxContainer/HBoxContainer/OKButton"]
wait_time = 1.5
one_shot = true

[node name="ResetButton" type="Button" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 155.0
margin_right = 220.0
margin_bottom = 39.0
custom_fonts/font = ExtResource( 2 )
text = "Reset"

[node name="NewAccountCheck" type="CheckBox" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 230.0
margin_right = 348.0
margin_bottom = 39.0
custom_fonts/font = ExtResource( 3 )
text = "New Account"

[node name="ErrorDisplay" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_top = 349.0
margin_right = 450.0
margin_bottom = 382.0
rect_min_size = Vector2( 450, 0 )
custom_fonts/font = ExtResource( 2 )
align = 1

[node name="Tween" type="Tween" parent="HBoxContainer/VBoxContainer/ErrorDisplay"]
